whoami/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: foo
  namespace: whoami
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  ports:
  - port: 8080
    targetPort: 8080
    name: http 
  selector:
    app: foo
  type: ClusterIP
