whoami/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: foo
spec:
  host: foo
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
